Sajan - today i have worked on custom progressbar, intant on cart btn,fixed bugs.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="phone_already_exists">Phone no already exists. Try signing up with a different phone no.</string>
     <string name="phone_does_not_exist">Phone no does not exist.</string>
     <string name="failed_user_addition_to_db">Failed adding user to database.</string>
+    <string name="please_wait">Please wait....</string>
 </resources>
